2002-01-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh_names.c (charset_to_utf8): 
	(utf8_to_charset):
	(EWMH_SetVisibleName):
	(get_charset):
	Better message errors in get_charset, use UTF-8 in the place of UTF8,
	set the ewmh visible (icon) name only if the fvwm visible name is
	different from the ICCCM (icon) window name, limit the number of
	conversions error messages to 10
	
2002-01-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/functions.c (func_config):
	* fvwm/commands.h: 
	* fvwm/builtins.c (CMD_PropertyChange):
	New undocumented command PropertyChange to send MX_PROPERTY_CHANGE
	messages

	* fvwm/module_interface.h:
	* fvwm/module_interface.c (BroadcastPropertyChange):
	* libs/Module.h (MX_PROPERTY_CHANGE):
	New module message MX_PROPERTY_CHANGE for all propose messages.

	* fvwm/events.c (HandlePropertyNotify):
	* libs/defaults.h:
	Send a MX_PROPERTY_CHANGE message with MX_PROPERTY_CHANGE_BACKGROUND
	as argument when fvwm2 detects that the root background change
 	Removed the ROOT_BG_CHANGE_STRING stuff

2002-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in:
	changed version to 2.5.1

	* fvwm/misc.c (get_pointer_fvwm_window):
	* fvwm/commands.h:
	* fvwm/functions.c (func_config):
	* fvwm/conditional.c (CreateConditionMask):
	(MatchesConditionMask):
	(CMD_PointerWindow):
	(CreateConditionMask):
	(CMD_Any):
	* fvwm/fvwm.h (WindowConditionMask):
	new conditions focused, !focused, haspointer, !haspointer
	new command PointerWindow that works like Current but on the window that
	currently contains the pointer
	new command Any which works like None but inverts the condition
	fixed parsing of conditions with more than one comma

	* fvwm/module_interface.h:
	* fvwm/module_interface.c (do_execute_module):
	(initModules):
	* libs/Module.h (MAX_XMSG_MASK):
	fixed default message mask for modules

	* fvwm/update.c (flush_window_updates):
	* fvwm/virtual.c (UnmapDesk):
	(MapDesk):
	(do_move_window_to_desk):
	* fvwm/icons.c (DeIconify):