@@ -227,7 +227,87 @@ following:
               ./txt2html.sh ../../fvwm/AUTHORS && \
               ./txt2html.sh ../../fvwm/docs/FAQ
           in the development branch.
-      18. Make sure the web pages in fvwm-web point to the new release.
+
+Be sure to do steps 10 and 11 in that order, so you get the label on the
+right version of configure.in.
+
+
+
+
+
+
+Building a distribution (new draft, ignore for now)
+---------------------------------------------------
+
+By this, I mean the files "fvwm-x.y.z.tar.gz" and "fvwm-x.y.z.tar.bz2".
+
+Steps: 0. For a stable release, change the dates in docs/fvwm.lsm.in,
+          fvwm/fvwm2.1 and update docs/ANNOUNCE.  Commit these changes.
+       1. When building a release, update the CVS sources first. For a
+          stable release it is best to throw away the whole source tree
+          and check it out from scratch to ensure all source files have
+          been added to CVS.
+       2. Make sure you have XPM, the strokes library and a X server with
+          the shape extension.
+       3. Run
+            automake --add-missing; autoreconf
+	  If you checked out fresh sources in step 1, run the same line
+          again:
+            automake --add-missing; autoreconf
+       4. If building a stable release, remove the config.cache file.
+       5. ./configure
+       6. make clean
+       7. Double check that you get no warnings during the build (the
+          options for compilers other than gcc may be different):
+          make CFLAGS="-g -O2 -Wall -Werror"
+       8. make distcheck2
+       9. Ensure that you see the message
+          "fvwm-x.y.z.tar.gz ready for distribution"
+
+The steps 3 to 9 can be done by running the script utils/make_fvwmdist.sh
+from the top level directory of the source tree.  You can also call
+this script with the -r option.  In this case the it will also do
+the steps 10 to 12.  The release number is increased by one after
+ the second digit.  The script will ask you for a name and mail address
+to be used in the ChangeLog entry.
+
+Note that you need to have actually built everything before packing
+the distribution, hence steps 3 to 5.  Among other things, this generates
+the proper dependency information for insertion into Makefile.in's
+generated in step 8.
+
+Step 8 will create the tar file, then unpack it and attempt a build &
+install (to a scratch directory, not /usr/local).  This makes sure
+that you really DID include all the files necessary to build the
+package into the tar file. It may be hard to appreciate how useful
+this is, until it has reminded you that you forgot file "foo.h" in
+some _SOURCES line.  But trust me, it will save your bacon in this way
+some day!
+
+
+If this is to be an "official", labeled release, then do also the
+following:
+
+      10. Tag the CVS tree:
+          cvs tag version-x_y_z
+      11. Increase the version number in configure.in (see above)
+          and `cvs commit' this change.
+      12. Create entries in the ChangeLog and NEWS files indicating the
+          release.
+      13. Upload the files fvwm-x.y.z.tar.gz and fvwm-x.y.z.tar.bz2 to
+	  ftp://ftp.fvwm.org/pub/incoming/fvwm
+      14. Notify fvwm-owner@fvwm.org of the upload.
+      15. Update the release numbers in fvwm-web/index.html and
+          fvwm-web/download.html.
+      16. For a stable release, copy the NEWS from the stable branch
+          to the development branch and update the link.
+      17. Use fvwm-web generated/txt2html.sh to update the NEWS, FAQ and
+          AUTHORS file
+            cd fvwm-web/generated && \
+              ./txt2html.sh ../../fvwm/NEWS && \
+              ./txt2html.sh ../../fvwm/AUTHORS && \
+              ./txt2html.sh ../../fvwm/docs/FAQ
+          in the development branch.
 
 Be sure to do steps 10 and 11 in that order, so you get the label on the
 right version of configure.in.
