@@ -36,6 +36,7 @@
 #include "borders.h"
 #include "virtual.h"
 #include "geometry.h"
+#include "icons.h"
 #include "gnome.h"
 #include "ewmh.h"
 
@@ -96,6 +97,7 @@ void verify_stack_ring_consistency(void)
 	"'%s' (layer %d) is above '%s' (layer %d/%d)\n",
 	t1->name, t1->layer, t2->name, t2->layer, last_layer);
       dump_stack_ring();
+abort();
       return;
     }
     last_layer = t1->layer;
@@ -114,6 +116,7 @@ void verify_stack_ring_consistency(void)
       "0x%08x -> 0x%08x but 0x%08x <- 0x%08x\n",
       (int)t2, (int)t1, (int)(t1->stack_prev), (int)t1);
     dump_stack_ring();
+abort();
     return;
   }
   MyXGrabServer(dpy);
@@ -156,6 +159,7 @@ void verify_stack_ring_consistency(void)
       }
       MyXUngrabServer(dpy);
       XFree(children);
+abort();
       return;
     }
     last_index = i;
@@ -330,17 +334,7 @@ static void raise_over_unmanaged(FvwmWindow *t)
 	 t2 = t2->stack_next)
     {
       count++;
-      if (IS_ICONIFIED(t2) && ! IS_ICON_SUPPRESSED(t2))
-      {
-	if (t2->icon_title_w != None)
-	{
-	  count++;
-        }
-	if (t2->icon_pixmap_w != None)
-	{
-	  count++;
-        }
-      }
+      count += get_visible_icon_window_count(t2);
       if (t2 == t)
       {
 	break;
@@ -461,10 +455,7 @@ static void restack_windows(
     for (t = r, prev = NULL; prev != s; prev = t, t = t->stack_next)
     {
       count++;
-      if (IS_ICONIFIED(t) && !IS_ICON_SUPPRESSED(t))
-      {
-	count += 2;
-      }
+      count += get_visible_icon_window_count(t);
     }
   }
   /* restack the windows between r and s */
@@ -601,10 +592,7 @@ static void RaiseOrLowerWindow(
     remove_window_from_stack_ring(t);
 
     count = 1;
-    if (IS_ICONIFIED(t) && !IS_ICON_SUPPRESSED(t))
-    {
-      count += 2;
-    }
+    count += get_visible_icon_window_count(t);
 
     if (do_move_transients)
     {
@@ -619,10 +607,7 @@ static void RaiseOrLowerWindow(
 	{
 	  /* t2 is a transient to lower */
 	  count++;
-	  if (IS_ICONIFIED(t2) && !IS_ICON_SUPPRESSED(t2))
-	  {
-	    count += 2;
-	  }
+	  count += get_visible_icon_window_count(t2);
 
 	  /* unplug it */
 	  remove_window_from_stack_ring(t2);
@@ -1207,8 +1192,7 @@ static int collect_transients_recursive(
       remove_window_from_stack_ring(s);
       add_window_to_stack_ring_after(s, list_head->stack_prev);
       count++;
-      if (IS_ICONIFIED(t) && !IS_ICON_SUPPRESSED(t))
-	count += 2;
+      count += get_visible_icon_window_count(t);
     }
     s = tmp;
   }
